local is working

--- a/public/pages/login.old.html
+++ b/public/pages/login.old.html
@@ -52,28 +52,28 @@
                 <div class="row text-center">
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-github" href="{{getLoginUrl('/api/oauth/github')}}" target="_self">
+                      <a class="btn-lg btn-block btn-github" href="{{getLoginUrl(OCTOBLU_API_URL + '/api/oauth/github')}}" target="_self">
                         <span class="fa fa-github"> Github</span>
                       </a>
                     </p><br>
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-facebook" href="{{getLoginUrl('/api/oauth/facebook')}}" target="_self">
+                      <a class="btn-lg btn-block btn-facebook" href="{{getLoginUrl(OCTOBLU_API_URL + '/api/oauth/facebook')}}" target="_self">
                         <span class="fa fa-facebook"> Facebook</span>
                       </a>
                     </p><br>
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-twitter" href="{{getLoginUrl('/api/oauth/twitter')}}" target="_self">
+                      <a class="btn-lg btn-block btn-twitter" href="{{getLoginUrl(OCTOBLU_API_URL + '/api/oauth/twitter')}}" target="_self">
                         <span class="fa fa-twitter"> Twitter</span>
                       </a>
                     </p><br>
                   </div>
                   <div class="col-xs-12 col-lg-6">
                     <p>
-                      <a class="btn-lg btn-block btn-google-plus" href="{{getLoginUrl('/api/oauth/google')}}" target="_self">
+                      <a class="btn-lg btn-block btn-google-plus" href="{{getLoginUrl(OCTOBLU_API_URL + '/api/oauth/google')}}" target="_self">
                         <span class="fa fa-google-plus"> Google+</span>
                       </a>
                     </p><br>
