use less to compile dependencies

--- a/public/pages/resources.html
+++ b/public/pages/resources.html
@@ -21,7 +21,7 @@
               </a>
             </h3>
 
-            <p class="resource__summary" ng-show="{{resource.summary}}">
+            <p class="resource__summary" ng-show="{{!!resource.summary}}">
               {{resource.summary}}
             </p>
           </div>
