fixed robot size in templates page

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -53,7 +53,7 @@
 
             <md-content flex layout="column" layout-wrap="wrap" class="templates-list">
                 <div ng-if="!templates.length" class="text-center">
-                    <img ng-src="{{randomRobot()}}" flex="33">
+                    <img ng-src="{{randomRobot()}}" style="max-height:50%;max-width:50%;" flex="33">
                     <h1 class="text-center">You have no shared templates.</h1>
                 </div>
                 <md-list flex>
