--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,63 +1,81 @@
 <div class="templates" layout-fill layout="column" flex>
   <md-toolbar>
-    <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
-      <div flex layout="row">
-        <a href class="menu-icon" ng-click="toggleNav()">
-          <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Templates
-        </a>
-      </div>
-
-      <md-button clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length" aria-label="Copy to Clipboard">
-        <md-tooltip>Copy to Clipboard</md-tooltip>
-        <i class="fa fa-share-alt"></i> Copy Link
-      </md-button>
-
-      <md-button ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
-        <md-tooltip>Delete Template</md-tooltip>
-        <i class="fa fa-trash"></i> Delete
-      </md-button>
-    </h2>
+      <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
+          <div flex layout="row">
+              <a href class="menu-icon" ng-click="toggleNav()">
+                  <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
+                  Templates
+              </a>
+          </div>
+          <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
+            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
+            <i class="fa fa-clipboard fa-lg"></i> Copy Link
+          </md-button>
+          <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
+            <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
+            <i class="fa fa-trash fa-lg"></i> Delete Template
+          </md-button>
+          <!-- <md-button ui-sref="material.templates.browse" aria-label="Browse Templates">
+            <md-tooltip>Browse Templates</md-tooltip>
+            Browse Templates
+          </md-button> -->
+      </h2>
   </md-toolbar>
   <div flex layout-fill layout="row" layout-align="center" style="z-index: 3; background-repeat: repeat;">
-    <md-content layout="row" layout-wrap="wrap" class="templates-list">
-      <div ng-if="!templates.length" class="text-center">
-        <img style="max-width:50%;max-height:50%" ng-src="{{randomRobot()}}" flex="1">
-        <h1 class="text-center">You have no shared templates.</h1>
-      </div>
-      <md-list flex>
-        <form class="form" layout="row" layout-align="center">
-          <div class="form-group" flex="100" style="margin-bottom: 0; padding: 10px;">
-            <div class="input-group">
-            <input type="text" class="form-control" ng-model="templateSearch" autofocus>
-            <span class="input-group-addon">
-              <i class="fa fa-search"></i>
-            </span>
-            </div>
-          </div>
-        </form>
-        <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
-          <md-item-content layout="row" layout-align="space-around">
-            <md-button flex layout="row" layout-align="start center" ng-click="setCurrentTemplate(template)" aria-label="Set Current Template">
-              <img src="{{OCTOBLU_ICON_URL}}device/flow.svg" height="30">
-              <div flex layout layout-align="space-between">
-                <h3>{{template.name}}</h3>
-                <h4>{{template.created | date: 'short'}}</h4>
-              </div>
-            </md-button>
-          </md-item-content>
-        </md-item>
-      </md-list>
-    </md-content>
-
-    <div style="min-height: 60%" flex="66" class="template-preview" layout="column" ng-if="templates.length">
-      <flow-editor flex="1" flow="currentTemplate.flow" readonly="true"></flow-editor>
-        <div style="padding: 0 0 15px 15px" flex="1" layout="column">
-        <md-input-container>
-          <label>Name</label>
-          <input ng-model="currentTemplate.name">
-        </md-input-container>
-          <bill-of-materials flow="currentTemplate.flow"></bill-of-materials>
+    <md-content flex layout="column" layout-wrap="wrap" class="templates-list">
+        <div ng-if="!templates.length" class="text-center">
+            <img ng-src="{{randomRobot()}}" style="max-height:50%;max-width:50%;">
+            <h1 class="text-center">You have no shared templates.</h1>
         </div>
-    </div>
+        <md-list ng-if="templates.length" flex="33">
+          <div layout="row" layout-align="space-around center" style="margin: auto; min-height: 60px">
+              <form class="form" layout="row" layout-align="center">
+                  <div class="form-group" flex="90" style="margin-bottom: 0; padding:10px;">
+                      <div class="input-group">
+                          <input type="text" class="form-control" ng-model="templateSearch" autofocus>
+                          <span class="input-group-addon">
+                              <i class="fa fa-search"></i>
+                          </span>
+                      </div>
+                  </div>
+              </form>
+          </div>
+            <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
+                <md-item-content layout="row" layout-align="space-around">
+                    <md-button flex layout="row" layout-align="start center" ng-click="setCurrentTemplate(template)" aria-label="Set Current Template">
+                        <img ng-src="{{OCTOBLU_ICON_URL}}device/flow.svg" height="30">
+                        <div flex layout layout-align="space-between" layout-wrap>
+                            <h3>{{template.name}}</h3>
+                            <h4>{{template.created | date: 'short'}}</h4>
+                        </div>
+                        <div flex="10" layout="row" layout-align="center" layout-wrap>
+                          <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
+                            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
+                            <i class="fa fa-clipboard fa-lg"></i>
+                          </md-button>
+                          <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
+                            <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
+                            <i class="fa fa-trash fa-lg"></i>
+                          </md-button>
+                        </div>
+                    </md-button>
+                </md-item-content>
+            </md-item>
+        </md-list>
+    </md-content>
+      <div flex="66" class="template-preview" layout="column" ng-if="templates.length">
+          <flow-editor flex flow="currentTemplate.flow" readonly="true" ></flow-editor>
+          <md-button class="md-fab md-primary"  style="position:fixed; bottom: 600px; right: 30px; padding: 15px;" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length" aria-label="Copy to Clipboard">
+            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
+            <i class="fa fa-clipboard fa-2x"></i>
+          </md-button>
+          <div flex style="padding: 0 0 15px 15px" layout="column">
+              <md-input-container>
+                <label>Name</label>
+                <input ng-model="currentTemplate.name">
+              </md-input-container>
+              <bill-of-materials flow="currentTemplate.flow"></bill-of-materials>
+          </div>
+      </div>
   </div>
 </div>
