There's a terrible looking shared flows page now

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -7,13 +7,9 @@
                   Templates
               </a>
           </div>
-          <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
-            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
-            <i class="fa fa-clipboard fa-lg"></i> Copy Link
-          </md-button>
-          <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
-            <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
-            <i class="fa fa-trash fa-lg"></i> Delete Template
+          <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
+            <md-tooltip>Browse Templates</md-tooltip>
+            <i class="fa fa-share-alt-square fa-lg"></i> Browse
           </md-button>
       </h2>
   </md-toolbar>
