--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -7,10 +7,18 @@
                   Templates
               </a>
           </div>
-          <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
+          <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
+            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
+            <i class="fa fa-clipboard fa-lg"></i> Copy Link
+          </md-button>
+          <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
+            <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
+            <i class="fa fa-trash fa-lg"></i> Delete Template
+          </md-button>
+          <!-- <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
             <md-tooltip>Browse Templates</md-tooltip>
             <i class="fa fa-share-alt-square fa-lg"></i> Browse
-          </md-button>
+          </md-button> -->
       </h2>
   </md-toolbar>
   <div flex layout-fill layout="row" layout-align="center" style="z-index: 3; background-repeat: repeat;">
@@ -57,10 +65,10 @@
     </md-content>
       <div flex="66" class="template-preview" layout="column" ng-if="templates.length">
           <flow-editor flex flow="currentTemplate.flow" readonly="true" ></flow-editor>
-          <md-button class="md-fab md-primary"  style="position:fixed; bottom: 600px; right: 30px; padding: 15px;" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length" aria-label="Copy to Clipboard">
+          <!-- <md-button class="md-fab md-primary"  style="position:fixed; bottom: 600px; right: 30px; padding: 15px;" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length" aria-label="Copy to Clipboard">
             <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
             <i class="fa fa-clipboard fa-2x"></i>
-          </md-button>
+          </md-button> -->
           <div flex style="padding: 0 0 15px 15px" layout="column">
               <md-input-container>
                 <label>Name</label>
