add orig webhook

--- a/public/pages/node_forms/webhook_form.html
+++ b/public/pages/node_forms/webhook_form.html
@@ -6,8 +6,8 @@
 There are two ways to trigger your webhook:
 <br>
 <h4>Email</h4>
-<a href="mailto:{{flowId}}-{{flowNode.id}}@webhook.octoblu.com" target="_blank">{{flowId}}-{{flowNode.id}}@webhook.octoblu.com</a>
+<a href="mailto:{{flowNode.id}}@webhook.octoblu.com" target="_blank">{{flowNode.id}}@webhook.octoblu.com</a>
 <br>
 <h4>HTTP POST</h4>
-<a ng-href="https://triggers.octoblu.com/flows/{{flowId}}/triggers/{{flowNode.id}}" target="_blank">https://triggers.octoblu.com/flows/{{flowId}}/triggers/{{flowNode.id}}</a>
+<a ng-href="https://app.octoblu.com/api/webhooks/{{flowNode.id}}" target="_blank">https://app.octoblu.com/api/webhooks/{{flowNode.id}}</a>
 </p>
