--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -16,10 +16,10 @@
   <div flex layout-fill layout="row" layout-align="center">
     <md-content flex="80" layout="column" layout-wrap="wrap">
       <md-grid-list md-cols-sm="2" md-cols-md="4" md-cols-gt-md="4" md-cols-gt-lg="8" md-row-height-gt-md="1:1" md-row-height="4:3" md-gutter="15px" md-gutter-gt-sm="4px" layout-margin>
-        <md-grid-tile ng-click="controller.importTemplate(template.id)" ng-repeat="template in controller.templates" md-rowspan="1" md-colspan="1" class="template" ng-style="{'background-color': template.color}">
+        <md-grid-tile ng-click="controller.importTemplate(template.id)" ng-repeat="template in controller.templates" md-rowspan="1" md-colspan="1" class="template md-whiteframe-z1">
           <div class="tile-container" flex layout-fill layout="column" layout-align="space-around center">
             <md-button class="md-icon-button"><i class="fa fa-share-alt"></i> Import Template</md-button>
-            <h4 class="template-description">{{template.id}}</h4>
+            <h4 class="template-description"></h4>
           </div>
           <md-grid-tile-footer><h3>{{template.name}}</h3></md-grid-tile-footer>
         </md-grid-tile>
