--- a/public/static/auth-login-success.html
+++ b/public/static/auth-login-success.html
@@ -5,7 +5,7 @@
 	<title>Octoblu Success</title>
 	<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/assets/stylesheets/font-awesome.min.css">
-  <script src="/lib/jquery/dist/jquery.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/static/auth-login.js"></script>
 </head>
 <body>
