--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -21,16 +21,16 @@
           </md-button> -->
       </h2>
   </md-toolbar>
-  <div flex layout-fill layout="row" layout-align="center" style="z-index: 3; background-repeat: repeat;">
-    <md-content flex layout="column" layout-wrap="wrap" class="templates-list">
+  <div class="template-container">
+    <md-content class="templates-list">
         <div ng-if="!templates.length" class="text-center">
             <img ng-src="{{randomRobot()}}" style="max-height:50%;max-width:50%;">
             <h1 class="text-center">You have no shared templates.</h1>
         </div>
         <md-list ng-if="templates.length" flex="33">
-          <div layout="row" layout-align="space-around center" style="margin: auto; min-height: 60px">
-              <form class="form" layout="row" layout-align="center">
-                  <div class="form-group" flex="90" style="margin-bottom: 0; padding:10px;">
+          <div class="search-container">
+              <form class="search-bar-form form">
+                  <div class="search-bar form-group">
                       <div class="input-group">
                           <input type="text" class="form-control" ng-model="templateSearch" autofocus>
                           <span class="input-group-addon">
@@ -40,34 +40,30 @@
                   </div>
               </form>
           </div>
-            <md-item ng-class="{'selected' : template === currentTemplate}" class="template-item" ng-repeat="template in templates | filter: {name:templateSearch}">
+            <md-item class="template-item" ng-class="{'selected' : template === currentTemplate}" ng-repeat="template in templates | filter: {name:templateSearch}">
                 <md-item-content ng-click="setCurrentTemplate(template)">
-                        <img ng-src="{{OCTOBLU_ICON_URL}}device/flow.svg" height="30">
-                        <div flex layout layout-align="space-between" layout-wrap>
-                            <h3>{{template.name}}</h3>
-                            <h4>{{template.created | date: 'short'}}</h4>
-                        </div>
-                        <div flex="10" layout="row" layout-align="center" layout-wrap>
-                          <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
-                            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
-                            <i class="fa fa-clipboard fa-lg"></i>
-                          </md-button>
-                          <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
-                            <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
-                            <i class="fa fa-trash fa-lg"></i>
-                          </md-button>
-                        </div>
+                      <img ng-src="{{OCTOBLU_ICON_URL}}device/flow.svg" height="30">
+                      <div class="template-info">
+                          <h3>{{template.name}}</h3>
+                          <h4>{{template.created | date: 'short'}}</h4>
+                      </div>
+                      <div class="template-button-container">
+                        <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
+                          <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
+                          <i class="fa fa-clipboard fa-lg"></i>
+                        </md-button>
+                        <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
+                          <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
+                          <i class="fa fa-trash fa-lg"></i>
+                        </md-button>
+                      </div>
                 </md-item-content>
             </md-item>
         </md-list>
     </md-content>
-      <div flex="66" class="template-preview" layout="column" ng-if="templates.length">
+      <div class="template-preview" flex=66 ng-if="templates.length">
           <flow-editor flex flow="currentTemplate.flow" readonly="true" ></flow-editor>
-          <!-- <md-button class="md-fab md-primary"  style="position:fixed; bottom: 600px; right: 30px; padding: 15px;" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length" aria-label="Copy to Clipboard">
-            <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
-            <i class="fa fa-clipboard fa-2x"></i>
-          </md-button> -->
-          <div flex style="padding: 0 0 15px 15px" layout="column">
+          <div class="current-template-info">
               <md-input-container>
                 <label>Name</label>
                 <input ng-model="currentTemplate.name">
