--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -14,7 +14,7 @@
           <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
             <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
             <i class="fa fa-trash fa-lg"></i> Delete Template
-          </md-button>
+          </md-button> -->
           <!-- <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
             <md-tooltip>Browse Templates</md-tooltip>
             <i class="fa fa-share-alt-square fa-lg"></i> Browse
