--- a/public/pages/browse.html
+++ b/public/pages/browse.html
@@ -45,8 +45,8 @@
 
           <div>
             <span class="directory__flow-meta directory__flow-meta--likes">
-               <i class="fa fa-heart"></i>
-               {{flow.like_count}}
+               <i ng-class="{liked: controller.liked(flow)}" ng-click="controller.likeFlow(flow)" class="fa fa-heart"></i>
+               {{flow.liked_by.length}}
             </span>
 
             <span class="directory__flow-meta directory__flow-meta--downloads">
