took out yup and nope from public checkbox

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -68,7 +68,7 @@
                 <label>Name</label>
                 <input ng-model="currentTemplate.name">
               </md-input-container>
-              <md-checkbox ng-model="currentTemplate.public" aria-label="Checkbox 2" ng-true-value="'yup'" ng-false-value="'nope'" class="md-warn">
+              <md-checkbox ng-model="currentTemplate.public" aria-label="Make Template Public" class="md-warn">
                 Public
               </md-checkbox>
               <div class="template-tags">
