--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
 <footer></footer>
 
-<script src="//d1g8h12lk9ydf.cloudfront.net/js/latest/meshblu.bundle.js"></script>
+<script src="//cdn.octoblu.com/js/latest/meshblu.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
 
