--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -15,10 +15,10 @@
             <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
             <i class="fa fa-trash fa-lg"></i> Delete Template
           </md-button>
-          <!-- <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
+          <md-button class="md-icon-button" ui-sref="material.browse" aria-label="Browse Templates">
             <md-tooltip>Browse Templates</md-tooltip>
             <i class="fa fa-share-alt-square fa-lg"></i> Browse
-          </md-button> -->
+          </md-button>
       </h2>
   </md-toolbar>
   <div class="template-container">
@@ -48,11 +48,11 @@
                           <h4>{{template.created | date: 'short'}}</h4>
                       </div>
                       <div class="template-button-container">
-                        <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)" ng-if="templates.length"  aria-label="Copy Template Link">
+                        <md-button class="md-icon-button" clip-click-fallback="dialogTemplateUrl(template.url)" clip-copy="template.url" clip-click="toastTemplateUrl(template.url)" ng-if="templates.length"  aria-label="Copy Template Link">
                           <md-tooltip md-direction="bottom">Copy Template Link</md-tooltip>
                           <i class="fa fa-clipboard fa-lg"></i>
                         </md-button>
-                        <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(currentTemplate.uuid)" ng-if="templates.length" aria-label="Delete Template">
+                        <md-button class="md-icon-button" ng-click="confirmDeleteTemplate(template.uuid)" ng-if="templates.length" aria-label="Delete Template">
                           <md-tooltip md-direction="bottom">Delete Template</md-tooltip>
                           <i class="fa fa-trash fa-lg"></i>
                         </md-button>
