try svg hack for IE

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
 
 <footer></footer>
 
+<svg width="100%" height="100%"></svg>
 <script src="//cdn.octoblu.com/js/latest/meshblu.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
