comment the magic

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
 
 <footer></footer>
 
+<!-- DO NOT DELETE THIS -->
 <svg width="100%" height="100%"></svg>
+<!-- MAGIC IE MAGIC MAGIC -->
 <script src="//cdn.octoblu.com/js/latest/meshblu.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
