icon for users shows up now

--- a/public/pages/template-browse.html
+++ b/public/pages/template-browse.html
@@ -72,7 +72,7 @@
             </span>
 
             <span class="directory__flow-meta directory__flow-meta--downloads">
-               <i class="fa fa-user-plus"></i>
+               <i class="fa fa-user"></i>
                {{flow.download_count}}
             </span>
           </div>
