Slew of fixes for IE

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -1,4 +1,4 @@
-<md-content layout="row" layout-align="center center">
+<md-content class="login-container">
   <div class="login-card" layout="column">
     <img class="login-octoblu-logo" src="/assets/images/octoblucirclebig.png">
 
