--- a/public/index.html
+++ b/public/index.html
@@ -35,15 +35,9 @@
         }
     </style>
 </head>
-<body class="container-fluid">
 
-<div ui-view="" class="row-fluid full-height"></div>
+<body ui-view>
 
-<footer></footer>
-
-<!-- DO NOT DELETE THIS -->
-<svg width="100%" height="100%"></svg>
-<!-- MAGIC IE MAGIC MAGIC -->
 <script src="//cdn.octoblu.com/js/latest/meshblu.bundle.js"></script>
 <script src="/assets/javascripts/dist/dependencies.js"></script>
 <script src="/assets/javascripts/dist/application.js"></script>
