--- a/public/pages/resources.html
+++ b/public/pages/resources.html
@@ -9,26 +9,23 @@
   </h2>
 </md-toolbar>
 
-<div flex layout-fill layout="row" layout-align="center">
-  <div layout-fill layout="row" >
-    <md-list flex class="resource__list">
-      <md-item ng-repeat="resource in resources">
-        <md-item-content class="resource">
-          <div class="md-tile-content">
-            <h3 class="resource__title">
-              <a href="{{resource.link}}">
-                {{resource.title}}
-              </a>
-            </h3>
+<md-content class="resource-container">
+  <md-list class="resource__list">
+    <md-item ng-repeat="resource in resources">
+      <md-item-content class="resource">
+        <div class="md-tile-content">
+          <h3 class="resource__title">
+            <a href="{{resource.link}}">
+              {{resource.title}}
+            </a>
+          </h3>
 
-            <p class="resource__summary" ng-show="{{!!resource.summary}}">
-              {{resource.summary}}
-            </p>
-          </div>
-        </md-item-content>
-        <md-divider ng-if="!$last"></md-divider>
-      </md-item>
-    </md-list>
-
-  </div>
-</div>
+          <p class="resource__summary" ng-show="{{!!resource.summary}}">
+            {{resource.summary}}
+          </p>
+        </div>
+      </md-item-content>
+      <md-divider ng-if="!$last"></md-divider>
+    </md-item>
+  </md-list>
+</md-content>
