--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -15,6 +15,28 @@
   </h2>
 </md-toolbar>
 
+<div class="jumbotron" ng-if="!loading && nodes.length === 0">
+  <p class="lead">
+   <span class="fa-stack fa-2x">
+    <i class="fa fa-code-fork fa-stack-1x"></i>
+    <i class="fa fa-ban fa-stack-2x text-danger"></i>
+  </span>
+  You currently have no Active Nodes</p>
+</div>
+
+<div class="connected-nodes">
+  <div class="connected-node" ng-repeat="node in nodes track by $index | filter: filterFlows | orderBy: 'name'">
+    <a href ng-href="{{nextStepUrl(node)}}" class="">
+      <div title="{{node.name}}" class="connected-node-thumbnail animated-popout" ng-class="{faded: !node.online}">
+        <img ng-src="{{node.logo}}" width="100%" height="100%">
+      </div>
+      <div class="connected-node-name">{{node.name}}</div>
+    </a>
+  </div>
+</div>
+
+
+<!--
 <div flex layout-fill layout="row" layout-align="center" style="z-index: 3; background-repeat: repeat;">
   <div layout-fill layout="column" style="background: white;">
     <md-content flex layout-fill>
@@ -22,7 +44,9 @@
         <div ng-if="nodes.length" ng-repeat="node in nodes | filter: filterFlows | orderBy: 'name'" class="bill-of-materials-icon">
           <h4 class="text-center">
             <a href ng-href="{{nextStepUrl(node)}}" class="">
-              <div title="{{node.name}}" class="node-thumbnail animated-popout" ng-style="{ 'background-image': 'url(' + node.logo + ')' }" title="{{node.name}}" ng-class="{faded: !node.online}"></div>
+              <div title="{{node.name}}" class="node-thumbnail animated-popout" title="{{node.name}}" ng-class="{faded: !node.online}">
+                <img ng-src="{{node.logo}}" width="100%" height="100%">
+              </div>
               <strong class="muted-link">{{node.name}}</strong>
             </a>
           </h4>
@@ -39,3 +63,5 @@
     </md-content>
   </div>
 </div>
+
+-->
